--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: meshtastic-forwarder
+    name: meshtastic-forwarder-server
 # expose health endpoint
 management:
   endpoints:
