--- a/.github/workflows/docker-publish-server.yml
+++ b/.github/workflows/docker-publish-server.yml
@@ -1,4 +1,5 @@
 name: Server docker image
+# TODO: add client docker image?
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
