--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -19,10 +19,19 @@ meshtastic:
     token: dev-token
     # `MESHTASTIC_CLIENT_ENABLETLS` env var overrides this
     enable-tls: false
+    # features
+    features:
+      # enable debug reply on primary channel
+      # MESHTASTIC_CLIENT_FEATURES_ENABLEDEBUGREPLYONPRIMARYCHANNEL
+      enable-debug-reply-on-primary-channel: true
 
-# enable debug reply on primary channel
-# MESHTASTIC_CLIENT_FEATURES_ENABLEDEBUGREPLYONPRIMARYCHANNEL
-meshtastic.client.features.enable-debug-reply-on-primary-channel: true
-# enable gemini on private chat
-# MESHTASTIC_CLIENT_FEATURES_ENABLEGEMINIONPRIVATECHAT
-meshtastic.client.features.enable-gemini-on-private-chat: true
+      # enable gemini on private chat
+      # MESHTASTIC_CLIENT_FEATURES_ENABLEGEMINIONPRIVATECHAT
+      enable-gemini-on-private-chat: true
+
+      # enable gemini on public chat
+      # MESHTASTIC_CLIENT_FEATURES_ENABLEGEMINIONPUBLICCHAT
+      enable-gemini-on-public-chat: true
+
+      # gemini enabled channel indexes, comma separated integer values
+      public-gemini-enabled-channel-indexes: 0
